          dejagnu.
	* testsuite/gm2/fpu/pass/testfpu1.mod:  moved and added into
          dejagnu.
	* testsuite/gm2/fpu/pass/testfpu2.mod:  moved and added into
          dejagnu.
	* testsuite/gm2/fpu/pass/testfpu3.mod:  moved and added into
          dejagnu.
	* testsuite/gm2/fpu/pass/testsin.mod:  moved and added into
          dejagnu.

2019-09-26      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  removed the Ulm libraries from the
          build process.
	* gm2/gm2.texi:  remove the Ulm libraries from the
          documentation.
	* gm2/tools-src/def2texi.py:  removed the Ulm libraries
	  from the table of auto generated indices.

2019-09-25      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-libs-iso/LowShort.def:  removed erroneous character
          at the beginning of the file.
	* gm2/ulm-lib-gm2/processes/CoExpressions.def:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/processes/CoExpressions.mod:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/processes/Processes.def:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/processes/Processes.mod:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/std/ASCII.def:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/std/ASCII.mod:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/std/Archive.def:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/std/Archive.mod:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/std/Arguments.def:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/std/Arguments.mod:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/std/Calendar.def:  changed GPL3
	  to the GCC GPL3 with runtime exception.
	* gm2/ulm-lib-gm2/std/Calendar.mod:  changed GPL3
	  to the GCC GPL3 with runtime exception.