@@ -73,9 +73,9 @@ DEFINE_LANG_NAME ("Modula-2")
   { "-fno-case",
       N_("turns off runtime checking to check whether a CASE statement requires an ELSE clause when on was not specified") },
   { "-fsoft-check-all",
-      N_("turns on all runtime checking (an abbreviation for -fnil -frange -findex -fwholediv -fcase -freturn -fwholediv -ffloatvalue)") },
+      N_("turns on all runtime checking (an abbreviation for -fnil -frange -findex -fwholediv -fcase -freturn-ffloatvalue)") },
   { "-fno-soft-check-all",
-      N_("turns off all runtime checking (an abbreviation for -fno-nil -fno-range -fno-index -fno-wholediv -fno-case -fno-return -fwholediv -ffloatvalue)") },
+      N_("turns off all runtime checking (an abbreviation for -fno-nil -fno-range -fno-index -fno-wholediv -fno-case -fno-return -fno-floatvalue)") },
   { "-fexceptions",
       N_("turns on all exception generating code (this is on by default)") },
   { "-fno-exceptions",
